	     driver between versions 3.02.73rh and 3.02.99.00rh. As a
	     consequence, we have downgraded the MPT Fusion driver in the RHEL4
	     kernel from 3.02.99.00 to 3.02.73 until this problem is fixed.

Severity   : enhancement
Bugzilla   : 14729
Description: SNMP support enhancement
Details    : Adding total number of sampled request for an MDS node in snmp
             support.

--------------------------------------------------------------------------------

2007-08-10         Cluster File Systems, Inc. <info@clusterfs.com>
       * version 1.6.1
       * Support for kernels:
        2.6.5-7.283 (SLES 9),
        2.6.9-55.EL (RHEL 4),
        2.6.16.46-0.14 (SLES 10),
        2.6.18.8 vanilla (kernel.org)
       * Client support for unpatched kernels:
        (see http://wiki.lustre.org/index.php?title=Patchless_Client)
        2.6.16 - 2.6.22 vanilla (kernel.org)
       * Due to recently discovered recovery problems, we do not recommend
        using patchless RHEL 4 clients with this or any earlier release.
       * Recommended e2fsprogs version: 1.39.cfs8
       * Note that reiserfs quotas are disabled on SLES 10 in this kernel.
       * Starting with this release, the ldiskfs backing filesystem required
        by Lustre is now in its own package, lustre-ldiskfs.  This package
        should be installed.  It is versioned separately from Lustre and
        may be released separately in future.

Severity   : minor
Bugzilla   : 13147
Description: block reactivating mgc import until all deactivates complete
Details    : Fix race when failing back MDT/MGS to itself (testing)

Severity   : minor
Frequency  : at statup only
Bugzilla   : 12860
Description: mds_lov_synchronize race leads to various problems
Details    : simultaneous MDT->OST connections at startup can cause the 
	     sync to abort, leaving the OSC in a bad state.

Severity   : enhancement
Bugzilla   : 12194
Description: add optional extra BUILD_VERSION info